--- a/index.html
+++ b/index.html
@@ -20,7 +20,42 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <link rel="stylesheet" type="text/css" href=main.css>
+      
+        <header></header>
+        <div class="content">
+          <section>
+            <h2>Journal</h2>
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+          </section>
+          <section>
+            <h2>HTML</h2>
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+          </section>
+          <section>
+            <h2>Cascading Style Sheet</h2>
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+          </section>
+          <section>
+            <h2>Javascript and jQuery</h2>
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+          </section>
+          <section>
+              <h2>Tools</h2>
+              <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+              <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+              <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+            </section>
+        </div>
+        <footer></footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
