not much changed

--- a/index.html
+++ b/index.html
@@ -21,38 +21,48 @@
 
         <!-- Add your site or application content here -->
         <link rel="stylesheet" type="text/css" href=main.css>
-      
+
         <header></header>
         <div class="content">
           <section>
+            <div class="flexContainer">
             <h2>Journal</h2>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+          </div>
           </section>
           <section>
             <h2>HTML</h2>
+            <div class="flexContainer">
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+          </div>
           </section>
           <section>
+            <div class="flexContainer">
             <h2>Cascading Style Sheet</h2>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+          </div>
           </section>
           <section>
+            <div class="flexContainer">
             <h2>Javascript and jQuery</h2>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+            </div>
           </section>
           <section>
               <h2>Tools</h2>
+              <div class="flexContainer">
               <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
               <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
               <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+            </div>
             </section>
         </div>
         <footer></footer>
