--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <section>
             <div class="flexContainer">
             <h2>Journal</h2>
-            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
+            <article>Hi ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
           </div>
