what am i doing

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html class="no-js" lang="">
+
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Oh hi Mark</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,8 +21,7 @@
 
         <!-- Add your site or application content here -->
         <link rel="stylesheet" type="text/css" href=main.css>
-
-        <header></header>
+        <title>Oh hi Mark</title>
         <div class="content">
           <section>
             <div class="flexContainer">
@@ -71,5 +70,6 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <p>Copyright &copy; Ty Brenner Studios</p>
     </body>
 </html>
