--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="no-js" lang="">
 
     <head>
+
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="description" content="">
@@ -20,19 +21,34 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
+        <header>
+            <div class="mainNav">
+        <h1>Web Development Notebook</h1>
+            <a href="https://github.com/tybrenner">GitHub</a>
+          <nav class="pageNav">
+            <ul>
+              <li><a href="#Journal">Journal</a></li>
+              <li><a href="#HTML">HTML</a></li>
+              <li><a href="#CSS">Cascading Style Sheet</a></li>
+              <li><a href="#Javascript">Javascript and jQuery</a></li>
+              <li><a href="#Tools">Tools</a></li>
+            </ul>
+          </nav>
+        </div>
+          </header>
         <link rel="stylesheet" type="text/css" href=main.css>
         <title>Oh hi Mark</title>
         <div class="content">
           <section>
             <div class="flexContainer">
-            <h2>Journal</h2>
+            <h2 id="Journal">Journal</h2>
             <article>Hi ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
           </div>
           </section>
           <section>
-            <h2>HTML</h2>
+            <h2 id="HTML">HTML</h2>
             <div class="flexContainer">
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
@@ -41,7 +57,7 @@
           </section>
           <section>
             <div class="flexContainer">
-            <h2>Cascading Style Sheet</h2>
+            <h2 id="CSS">Cascading Style Sheet</h2>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
@@ -49,14 +65,14 @@
           </section>
           <section>
             <div class="flexContainer">
-            <h2>Javascript and jQuery</h2>
+            <h2 id="Javascript">Javascript and jQuery</h2>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
             </div>
           </section>
           <section>
-              <h2>Tools</h2>
+              <h2 id="Tools">Tools</h2>
               <div class="flexContainer">
               <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
               <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper vehicula diam in lacinia. In quis velit sed augue vulputate pretium. Cras mollis faucibus libero a rhoncus. Vestibulum et elit nunc. Nullam vestibulum, mi sit amet tempus scelerisque, nibh lorem commodo libero, vel laoreet nisl enim id libero.</article>
@@ -70,6 +86,8 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <div class="copyright">
         <p>Copyright &copy; Ty Brenner Studios</p>
+      </div>
     </body>
 </html>
